--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,30 +25,10 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
-.card-shadow:hover {
-  -webkit-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.2);
-  box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.2);
-}
-
-.card-shadow {
-  transition: box-shadow 0.2s cubic-bezier(0.15, 0.85, 0.45, 1);
-}
-
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: 400;
 }
 
 #ember-right-click-menu-wormhole > ul {
   z-index: 100000;
-}
-
-.auth0-lock.auth0-lock .auth0-lock-cred-pane-internal-wrapper {
-  height: auto!important;
-}
-
-.auth0-lock.auth0-lock.auth0-lock-opened-in-frame {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
